// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClinicalResult correctly applies the theme context className 1`] = `
<div
  className="clinical-result orion-fusion-theme"
>
  <ClinicalResultDisplay
    eventId="111"
    result={
      Object {
        "unit": "mL",
        "value": "12345.678",
      }
    }
  />
</div>
`;

exports[`ClinicalResult should pass certain props to Observation  1`] = `
<div
  className="clinical-result"
>
  <ClinicalResultDisplay
    eventId="111"
    hideUnit={true}
    interpretation="critical"
    result={
      Object {
        "unit": "mL",
        "value": "12345.678",
      }
    }
  />
</div>
`;

exports[`ClinicalResult should render a NoData if hasResultNoData is true 1`] = `
<div
  className="clinical-result"
>
  <injectIntl(KnownNoData) />
</div>
`;

exports[`ClinicalResult should render a ResultError if hasResultError is true 1`] = `
<div
  className="clinical-result"
>
  <injectIntl(ResultError) />
</div>
`;

exports[`ClinicalResult should render a commented result  1`] = `
<div
  className="clinical-result"
>
  <ClinicalResultDisplay
    eventId="111"
    hasComment={true}
    result={
      Object {
        "unit": "mL",
        "value": "12345.678",
      }
    }
  />
</div>
`;

exports[`ClinicalResult should render a default ClinicalResult 1`] = `
<div
  className="clinical-result"
>
  <ClinicalResultDisplay
    eventId="111"
    result={
      Object {
        "unit": "mL",
        "value": "12345.678",
      }
    }
  />
</div>
`;

exports[`ClinicalResult should render a entered-in-error status result 1`] = `
<div
  className="clinical-result"
>
  <ClinicalResultDisplay
    eventId="111"
    interpretation="critical"
    result={
      Object {
        "unit": "mL",
        "value": "12345.678",
      }
    }
    status="entered-in-error"
  />
</div>
`;

exports[`ClinicalResult should render a modified result  1`] = `
<div
  className="clinical-result"
>
  <ClinicalResultDisplay
    eventId="111"
    isModified={true}
    result={
      Object {
        "unit": "mL",
        "value": "12345.678",
      }
    }
  />
</div>
`;

exports[`ClinicalResult should render a result with a concept display 1`] = `
<div
  className="clinical-result"
>
  <ClinicalResultDisplay
    conceptDisplay="Temperature Oral"
    eventId="111"
    result={
      Object {
        "unit": "mL",
        "value": "12345.678",
      }
    }
  />
</div>
`;

exports[`ClinicalResult should render a result with a date time display 1`] = `
<div
  className="clinical-result"
>
  <ClinicalResultDisplay
    datetimeDisplay="Nov 23, 2019 13:31:31"
    eventId="111"
    result={
      Object {
        "unit": "mL",
        "value": "12345.678",
      }
    }
  />
</div>
`;

exports[`ClinicalResult should render a result with unit hidden 1`] = `
<div
  className="clinical-result"
>
  <ClinicalResultDisplay
    eventId="111"
    hideUnit={true}
    result={
      Object {
        "unit": "mL",
        "value": "12345.678",
      }
    }
  />
</div>
`;

exports[`ClinicalResult should render a truncated ClinicalResult 1`] = `
<div
  className="clinical-result truncated"
>
  <ClinicalResultDisplay
    eventId="111"
    isTruncated={true}
    result={
      Object {
        "unit": "mL",
        "value": "12345.678",
      }
    }
  />
</div>
`;

exports[`ClinicalResult should render a truncated ClinicalResult with icons moved 1`] = `
<div
  className="clinical-result truncated"
>
  <ClinicalResultDisplay
    eventId="111"
    isModified={true}
    isTruncated={true}
    result={
      Object {
        "unit": "mL",
        "value": "12345.678",
      }
    }
  />
</div>
`;

exports[`ClinicalResult should render an unverified result  1`] = `
<div
  className="clinical-result"
>
  <ClinicalResultDisplay
    eventId="111"
    isUnverified={true}
    result={
      Object {
        "unit": "mL",
        "value": "12345.678",
      }
    }
  />
</div>
`;
